[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-agent"
version = "0.1.0"
description = "A computer-vision based desktop automation library."
readme = "README.md"
authors = [
  { name="Djebbes Rabah", email="rabahwork@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "easyocr>=1.7.0",
    "opencv-python>=4.0.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "numpy",
    "pillow"
]

[project.urls]
"Homepage" = "https://github.com/rabahdj2002/https://github.com/rabahdj2002/vision-agent"
"Bug Tracker" = "https://github.com/rabahdj2002/https://github.com/rabahdj2002/vision-agent/issues"